[package]
name = "pet-esu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
fixedbitset = "0.4.2"
graph-canon = "0.1.2"
graph6-rs = "0.1.5"
hashbrown = "0.13.2"
petgraph = "0.6.3"
petgraph-gen = "0.1.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.6.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[profile.release-with-debug]
inherits = "release"
debug = true
