[package]
name = "memoesu"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
graph6-rs = "0.1.5"
hashbrown = "0.13.2"
petgraph = "0.6.3"
petgraph-gen = "0.1.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.6.1"
fixedbitset = { path = "./libs/fixedbitset" }
nauty-Traces-sys = "0.3.0"
bitvec = "1.0.1"
clap = { version = "4.1.8", features = ["derive"] }
flurry = "0.4.0"

[profile.release-with-debug]
inherits = "release"
debug = true
